--- a/CSS/index.css
+++ b/CSS/index.css
@@ -151,7 +151,7 @@ h4 {
 
 .article2 .root_banner {
   position: relative;
-  background: url('../img/article_2/bg-logo.png') no-repeat center center;
+  background: url('../IMG/article_2/bg-logo.png') no-repeat center center;
   width: 100%;
   height: 350px;
 }
@@ -259,7 +259,7 @@ h4 {
 /* article5 */
 
 .article5 {
-  background: url(../img/article_5/about_bg.png) no-repeat top left #2b3e56;
+  background: url("../IMG/article_5/about_bg.png") no-repeat top left #2b3e56;
   background-size: 50%;
 }
 
@@ -374,7 +374,7 @@ h4 {
 /* article6 */
 
 .article6 {
-  background: url("../img/article_6/products_bg.png") no-repeat top left #fff;
+  background: url("../IMG/article_6/products_bg.png") no-repeat top left #fff;
   background-size: 50%;
 }
 
